peertube-on-kubernetes/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: peertube
  labels:
    app: peertube
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
    - hosts:
        - peertube.example.org
      secretName: peertube-tls
  rules:
    - host: peertube.example.org
      http:
        paths:
          - path: /
            backend:
              serviceName: peertube
              servicePort: 9000
